--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": {
     "name": "Sindre Sorhus",
     "email": "sindresorhus@gmail.com",
-    "url": "http://sindresorhus.com"
+    "url": "sindresorhus.com"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -34,6 +34,9 @@
     "signum",
     "real"
   ],
+  "dependencies": {
+    "number-is-nan": "^1.0.0"
+  },
   "devDependencies": {
     "ava": "0.0.4"
   }
